<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background_color"
    >

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="289dp"
        android:layout_height="101dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="204dp"
        android:textColor="@color/black"
        android:textSize="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:background="@color/Button_color"
        android:onClick="empezarCronometro"
        android:text="@string/empezar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cronometro" />

    <Button
        android:id="@+id/button2"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:background="@color/Button_color"
        android:onClick="pausarCronometro"
        android:text="@string/pausar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:background="@color/Button_color"
        android:onClick="reiniciarCronometro"
        android:text="@string/reiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:id="@+id/last"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="104dp"
        android:textColor="@color/black"
        android:text="Cronometro"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="613dp"
        tools:visibility="invisible"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>